test/TestSuite/Syntax/Errors/report_end.tjp
project test "Test" "1.0" 2007-11-16 +2m 

task t "T" {
  start ${projectstart}
}

htmltaskreport "report.html" {
# MARK: error 9 report_end
  end 2007-10-01
}
